Changelog
=========

9.2-dev - (unreleased)
----------------------

9.1 - (2014-08-27)
------------------
* Bug fix: fixed xml export
  [malduvit refs #20662]

9.0 - (2014-06-30)
------------------
* Bug fix: fixed problems reported by running the tests
  [ghicaale refs #20014]

8.9 - (2014-06-11)
------------------
* Bug fix: fixed saving process of "Other metadata" by intercepting wrong
  data structure of frequency of updates compound field.
  [ghicaale refs #20014]

8.8 - (2014-05-13)
------------------
* Bug fix: relation validation error on Assessment no longer triggers an
  unauthorized error and widget can be used to correct the validation error
  [ichimdav refs #19222]
* Bug fix: Display charts properly when too many charts from the same
  visualization is added in a figure and the tabs are replaced with a dropdown
  [szabozo0 refs #19101]

8.7 - (2014-03-05)
------------------
* Upgrade Step: upgrade the eea.indicators package from Addons in plone
  control panel
  [ichimdav #18602]
* Bug fix: geotags are now properly set and displayed on Assessment portal_type
  [ichimdav #18602]
* Feature: Set effective_date on related figures when syncing workflow for
  related figures.
  [olimpiurob refs #18601]

8.6 - (2014-02-13)
------------------
* Feature: Added new compound field "frequency of update". Added option for
  export in HTML format "keepHTML=true"
  [mironovi refs #18424]

8.5 - (2014-02-03)
------------------
* Bug fix: cleaned references of tooltip macro being loaded from dataset_view
  [ichimdav refs #18197]

8.4 - (2014-01-22)
------------------
* Bug fix: reference geotags macros from eea.forms instead of
  eea.dataservice
  [ichimdav refs #16719]
* Bug fix: reference temporal-coverage macros from eea.forms instead of
  eea.dataservice
  [ichimdav refs #16719]
* Bug fix: fixed tests after adding the temporalCoverage through the
  schema extender as appose to directly on the indicators schema
  [ichimdav #17611]